--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26,py27,py34,py35,py36
+envlist = py27,py34,py35,py36
 
 [testenv]
 deps =
@@ -13,14 +13,3 @@ commands =
     py.test --cov pyathena --cov-report html --cov-report term --flake8
 passenv =
     AWS_*
-
-[testenv:py26]
-deps =
-    unittest2
-    futures
-    SQLAlchemy>=1.0.0
-    pytest
-    pytest-cov
-    pytest-catchlog
-commands =
-    py.test --cov pyathena --cov-report html --cov-report term
