--- a/tox.ini
+++ b/tox.ini
@@ -2,13 +2,9 @@
 envlist = py27,py34,py35,py36
 
 [testenv]
-deps =
-    SQLAlchemy>=1.0.0
-    pytest
-    pytest-cov
-    pytest-flake8
-    pytest-catchlog
+deps = pipenv
 commands =
-    py.test --cov pyathena --cov-report html --cov-report term --flake8
+    pipenv install --dev
+    pipenv run pytest --cov pyathena --cov-report html --cov-report term --flake8
 passenv =
     AWS_*
