--- a/Pipfile
+++ b/Pipfile
@@ -6,17 +6,19 @@ name = "pypi"
 
 [packages]
 "e1839a8" = {path = ".", extras = ["sqlalchemy"], editable = true}
+futures = {version = "*", markers = "python_version == '2.7'"}
+monotonic = {version = ">=0.6", markers = "python_version == '2.7'"}
 
 
 [dev-packages]
 awscli = "*"
 tox = "*"
 twine = "*"
+wheel = "*"
 
 pytest = ">=3.4"
 pytest-cov = "*"
 pytest-flake8 = "*"
 
-futures = {version = "*", markers="python_version <= '2.7'"}
-funcsigs = {version = "*", markers="python_version < '3.3'"}
-monotonic = {version = ">=0.6", markers="python_version == '2.7'"}
+configparser = {version = "*", "markers" = "python_version < '3.2'"}
+funcsigs = {version = "*", "markers" = "python_version < '3.3'"}
