--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,6 @@ name = "pypi"
 
 [packages]
 "e1839a8" = {path = ".", extras = ["sqlalchemy"], editable = true}
-futures = {version = "*", markers = "python_version == '2.7'"}
-monotonic = {version = ">=0.6", markers = "python_version == '2.7'"}
 
 
 [dev-packages]
@@ -16,9 +14,6 @@ tox = "*"
 twine = "*"
 wheel = "*"
 
-pytest = ">=3.4"
+pytest = ">=3.5"
 pytest-cov = "*"
-pytest-flake8 = "*"
-
-configparser = {version = "*", "markers" = "python_version < '3.2'"}
-funcsigs = {version = "*", "markers" = "python_version < '3.3'"}
+pytest-flake8 = ">=1.0.1"
