--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,12 @@
 envlist = py27,py34,py35,py36
 
 [testenv]
-deps = pipenv
+deps =
+    SQLAlchemy>=1.0.0
+    pytest>=3.5
+    pytest-cov
+    pytest-flake8>=1.0.1
 commands =
-    pipenv install --dev
-    pipenv run pytest --cov pyathena --cov-report html --cov-report term --flake8
+    pytest --cov pyathena --cov-report html --cov-report term --flake8
 passenv =
     AWS_*
