--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
-sudo: false
+dist: xenial
+sudo: required
 language: python
 cache:
   - pip
@@ -12,6 +13,8 @@ matrix:
       env: TOXENV=py35
     - python: 3.6
       env: TOXENV=py36
+    - python: 3.7
+      env: TOXENV=py37
 install:
   - pip install tox codecov awscli
 before_script:
