Add pyarrow in test dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist = py27,py35,py36,py37
 deps =
     SQLAlchemy>=1.0.0, <2.0.0
     pandas>=0.24.0
+    pyarrow>=0.15.0
     pytest>=3.5
     pytest-cov
     pytest-flake8>=1.0.1
