--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,8 @@ deps =
     pytest>=3.5
     pytest-cov
     pytest-flake8>=1.0.1
+    pytest-xdist
 commands =
-    pytest --cov pyathena --cov-report html --cov-report term --flake8
+    pytest --cov pyathena --cov-report html --cov-report term --flake8 -n 4
 passenv =
     AWS_*
