--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,6 @@ deps =
     pytest-flake8>=1.0.1
     pytest-xdist
 commands =
-    pytest --cov pyathena --cov-report html --cov-report term --flake8 -n 4
+    pytest --cov pyathena --cov-report html --cov-report term --flake8
 passenv =
     AWS_*
