--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,8 @@ universal = 1
 
 [tool:pytest]
 flake8-max-line-length = 100
+
+[isort]
+line_length = 100
+order_by_type = True
+multi_line_output = 4
