--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,10 @@ deps =
     pytest>=3.5
     pytest-cov
     pytest-flake8>=1.0.1
+    pytest-black
+    pytest-isort
     pytest-xdist
 commands =
-    pytest --cov pyathena --cov-report html --cov-report term --flake8
+    pytest --cov pyathena --cov-report html --cov-report term --flake8 --black --isort
 passenv =
     AWS_*
