--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,8 @@ universal = 1
 flake8-max-line-length = 100
 
 [isort]
-line_length = 100
-order_by_type = True
-multi_line_output = 4
+multi_line_output=3
+include_trailing_comma=True
+force_grid_wrap=0
+use_parentheses=True
+line_length=88
