Update tox.ini: Python 2.7 and 3.5 excluded from testing with isort

--- a/tox.ini
+++ b/tox.ini
@@ -16,3 +16,11 @@ commands =
     pytest --cov pyathena --cov-report html --cov-report term --flake8 --black --isort
 passenv =
     AWS_*
+
+[testenv:py{27,35}]
+deps =
+    {[testenv]deps}
+commands =
+    pytest --cov pyathena --cov-report html --cov-report term --flake8 --black
+passenv =
+    {[testenv]passenv}
