Update library dependencies

--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,9 @@ awscli = "*"
 tox = "*"
 twine = "*"
 wheel = "*"
+pandas = ">=0.24.0"
+pyarrow = ">=0.15.0"
+SQLAlchemy = ">=1.0.0, <2.0.0"
 pytest = ">=3.5"
 pytest-cov = "*"
 pytest-flake8 = ">=1.0.1"
