Reorganize setup.py and setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,67 @@
+[metadata]
+name = PyAthena
+version = attr: pyathena.__version__
+url = https://github.com/laughingman7743/PyAthena/
+license = MIT License
+license_files = LICENSE
+author = laughingman7743
+author_email = laughingman7743@gmail.com
+maintainer = laughingman7743
+maintainer_email = laughingman7743@gmail.com
+description = Python DB API 2.0 (PEP 249) client for Amazon Athena
+long_description = file: README.rst
+long_description_content_type = text/x-rst
+classifiers =
+    Development Status :: 4 - Beta
+    Intended Audience :: Developers
+    License :: OSI Approved :: MIT License
+    Operating System :: OS Independent
+    Topic :: Database :: Front-Ends
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+
+[options]
+packages = find:
+include_package_data = true
+python_requires = >=3.6
+zip_safe = false
+install_requires =
+    botocore>=1.5.52
+    boto3>=1.4.4
+    tenacity>=4.1.0
+tests_require =
+    SQLAlchemy>=1.0.0, <2.0.0
+    pandas>=1.0.0
+    pyarrow>=1.0.0
+    pytest>=3.5
+    pytest-cov
+    pytest-flake8>=1.0.1
+    pytest-black
+    pytest-isort
+
+[options.packages.find]
+exclude =
+    tests
+
+[options.package_data]
+* =
+    LICENSE
+    *.rst
+    Pipfile*
+
+[options.extras_require]
+Pandas =
+    pandas>=1.0.0
+    pyarrow>=1.0.0
+SQLAlchemy =
+    SQLAlchemy>=1.0.0, <2.0.0
+
+[options.entry_points]
+sqlalchemy.dialects =
+    awsathena.rest = pyathena.sqlalchemy_athena:AthenaDialect
+
 [bdist_wheel]
 universal = 1
 
