Install pytest-mypy & Add py.typed

--- a/Pipfile
+++ b/Pipfile
@@ -14,12 +14,14 @@ awscli = "*"
 tox = "*"
 twine = "*"
 wheel = "*"
+SQLAlchemy = ">=1.0.0, <2.0.0"
 pandas = ">=1.0.0"
 pyarrow = ">=1.0.0"
-SQLAlchemy = ">=1.0.0, <2.0.0"
+mypy = "*"
 pytest = ">=3.5"
 pytest-cov = "*"
 pytest-flake8 = ">=1.0.1"
 pytest-black = "*"
 pytest-isort = "*"
 pytest-xdist = "*"
+pytest-mypy = "*"
