--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,6 @@ setenv =
     PIPENV_VERBOSITY=-1
 commands =
     pipenv sync --dev
-    pipenv run pytest --cov pyathena --cov-report html --cov-report term --flake8 --black --isort
+    pipenv run pytest --cov pyathena --cov-report html --cov-report term --flake8 --black --isort --mypy
     codecov -e TOXENV
 passenv = AWS_* TOXENV CI TRAVIS TRAVIS_* CODECOV_*
