Update mypy config

--- a/setup.cfg
+++ b/setup.cfg
@@ -86,3 +86,14 @@ strict_optional = True
 check_untyped_defs = True
 allow_redefinition = True
 ignore_missing_imports = True
+warn_redundant_casts = True
+warn_no_return = True
+warn_return_any = True
+warn_unreachable = True
+warn_unused_configs = True
+
+[mypy-benchmarks.*]
+ignore_errors = True
+
+[mypy-tests.*]
+ignore_errors = True
