--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,11 @@
 [tox]
-skipsdist = True
+isolated_build = true
 envlist = py36,py37,py38
 
 [testenv]
-deps =
-    pipenv
-    codecov
-setenv =
-    PYTHONPATH={toxinidir}
-    PIPENV_VERBOSITY=-1
+whitelist_externals = poetry
 commands =
-    pipenv sync --dev
-    pipenv run pytest --cov pyathena --cov-report html --cov-report term --flake8 --black --isort --mypy
-    codecov -e TOXENV
+    poetry install -v
+    poetry run pytest --cov pyathena --cov-report html --cov-report term --flake8 --black --isort --mypy
+    poetry run codecov -e TOXENV
 passenv = AWS_* TOXENV CI TRAVIS TRAVIS_* CODECOV_*
