--- a/tox.ini
+++ b/tox.ini
@@ -14,4 +14,4 @@ commands =
     poetry install -v
     poetry run pytest --cov pyathena --cov-report html --cov-report term --flake8 --black --isort --mypy
     poetry run codecov -e TOXENV
-passenv = AWS_* TOXENV CI TRAVIS TRAVIS_* CODECOV_*
+passenv = AWS_* TOXENV GITHUB_* CODECOV_*
