Add twine https://github.com/python-poetry/poetry/issues/111

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ colorama = "0.4.1"
 awscli = "*"
 tox = "*"
 wheel = "*"
+twine = "*"
 pandas = ">=1.0.0"
 pyarrow = ">=1.0.0"
 SQLAlchemy = ">=1.0.0, <2.0.0"
