Convert extras names to lowercase (fix #189): https://github.com/pypa/pip/issues/4617

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ wheel = "*"
 twine = "*"
 pandas = ">=1.0.0"
 pyarrow = ">=1.0.0"
-SQLAlchemy = ">=1.0.0, <2.0.0"
+sqlalchemy = ">=1.0.0, <2.0.0"
 mypy = "*"
 pytest = ">=3.5"
 pytest-cov = "*"
@@ -56,8 +56,8 @@ pytest-mypy = "*"
 codecov = "*"
 
 [tool.poetry.extras]
-Pandas = ["pandas", "pyarrow"]
-SQLAlchemy = ["sqlalchemy"]
+pandas = ["pandas", "pyarrow"]
+sqlalchemy = ["sqlalchemy"]
 
 [tool.poetry.plugins."sqlalchemy.dialects"]
 "awsathena.rest" = "pyathena.sqlalchemy_athena:AthenaDialect"
