Use poetry instead of pipenv https://github.com/laughingman7743/PyAthena/pull/175

--- a/tox.ini
+++ b/tox.ini
@@ -1,26 +1,21 @@
 [tox]
+isolated_build = true
 envlist = py27,py35,py36,py37,py38
 
 [testenv]
-deps =
-    SQLAlchemy>=1.0.0, <2.0.0
-    pandas>=0.24.0
-    pyarrow>=0.15.0
-    pytest>=3.5
-    pytest-cov
-    pytest-flake8>=1.0.1
-    pytest-black
-    pytest-isort
-    pytest-xdist
+whitelist_externals = poetry
 commands =
-    pytest --cov pyathena --cov-report html --cov-report term --flake8 --black --isort
-passenv =
-    AWS_*
+    poetry install -v
+    poetry run pytest --cov pyathena --cov-report html --cov-report term --flake8 --black --isort
+    poetry run codecov -e TOXENV
+passenv = AWS_* TOXENV CI TRAVIS TRAVIS_* CODECOV_*
 
 [testenv:py{27,35}]
-deps =
-    {[testenv]deps}
+whitelist_externals =
+    {[testenv]whitelist_externals}
 commands =
-    pytest --cov pyathena --cov-report html --cov-report term --flake8 --black
+    poetry install -v
+    poetry run pytest --cov pyathena --cov-report html --cov-report term --flake8 --black
+    poetry run codecov -e TOXENV
 passenv =
     {[testenv]passenv}
