--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,8 @@ matrix:
     - python: 3.8
       env: TOXENV=py38
 install:
-  - pip install tox codecov awscli
+  - pip install poetry tox awscli
 before_script:
   - ./scripts/test_data/upload_test_data.sh
 script:
   - tox
-after_success:
-  # - ./scripts/test_data/delete_test_data.sh
-  - codecov
