--- a/tox.ini
+++ b/tox.ini
@@ -2,13 +2,21 @@
 isolated_build = true
 envlist = py27,py35,py36,py37,py38
 
+[gh-actions]
+python =
+    2.7: py27
+    3.5: py35
+    3.6: py36
+    3.7: py37
+    3.8: py38
+
 [testenv]
 whitelist_externals = poetry
 commands =
     poetry install -v
     poetry run pytest --cov pyathena --cov-report html --cov-report term --flake8 --black --isort
     poetry run codecov -e TOXENV
-passenv = AWS_* TOXENV CI TRAVIS TRAVIS_* CODECOV_*
+passenv = AWS_* TOXENV GITHUB_* CODECOV_*
 
 [testenv:py{27,35}]
 whitelist_externals =
