Set poetry config experimental.new-installer false

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ python =
 [testenv]
 whitelist_externals = poetry
 commands =
+    poetry config experimental.new-installer false
     poetry install -v
     poetry run pytest --cov pyathena --cov-report html --cov-report term --flake8 --black --isort
     poetry run codecov -e TOXENV
