--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,6 +26,19 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install poetry tox tox-gh-actions awscli
+      - name: Set up cache
+        uses: actions/cache@v1
+        id: cache
+        with:
+          path: ~/.poetry
+          key: poetry-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('poetry.lock') }}
+          restore-keys: |
+            poetry-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('poetry.lock') }}
+      - name: Set Poetry config
+        run: |
+          poetry config virtualenvs.in-project false
+          poetry config virtualenvs.path ~/.poetry
+          poetry config experimental.new-installer false
       - name: Upload test data
         run: |
           ./scripts/test_data/upload_test_data.sh
