--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,9 @@ passenv = AWS_* TOXENV GITHUB_* CODECOV_*
 whitelist_externals =
     {[testenv]whitelist_externals}
 commands =
+    poetry config virtualenvs.in-project false
+    poetry config virtualenvs.path ~/.poetry
+    poetry config experimental.new-installer false
     poetry install -v
     poetry run pytest --cov pyathena --cov-report html --cov-report term --flake8 --black
     poetry run codecov -e TOXENV
