--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ boto3 = ">=1.4.4"
 botocore = ">=1.5.52"
 pandas = {version = ">=1.0.0", optional = true}
 pyarrow = {version = ">=1.0.0", optional = true}
+pytz = "*"
 sqlalchemy = {version = "<2.0.0,>=1.0.0", optional = true}
 tenacity = ">=4.1.0"
 
