--- a/tox.ini
+++ b/tox.ini
@@ -15,5 +15,4 @@ commands =
     poetry config experimental.new-installer false
     poetry install -v
     poetry run pytest --cov pyathena --cov-report html --cov-report term --flake8 --black --isort --mypy
-    poetry run codecov -e TOXENV
-passenv = AWS_* TOXENV GITHUB_* CODECOV_*
+passenv = AWS_* TOXENV GITHUB_*
