--- a/tox.ini
+++ b/tox.ini
@@ -16,8 +16,7 @@ commands =
     poetry config experimental.new-installer false
     poetry install -v
     poetry run pytest --cov pyathena --cov-report html --cov-report term --flake8 --black --isort
-    poetry run codecov -e TOXENV
-passenv = AWS_* TOXENV GITHUB_* CODECOV_*
+passenv = AWS_* TOXENV GITHUB_*
 
 [testenv:py{27,35}]
 whitelist_externals =
@@ -26,6 +25,5 @@ commands =
     poetry config experimental.new-installer false
     poetry install -v
     poetry run pytest --cov pyathena --cov-report html --cov-report term --flake8 --black
-    poetry run codecov -e TOXENV
 passenv =
     {[testenv]passenv}
