--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ pyarrow = ">=1.0.0"
 sqlalchemy = ">=1.0.0, <2.0.0"
 black = "^21.12b0"
 mypy = ">=0.900"
+flake8 = "<4" # https://github.com/tholo/pytest-flake8/issues/81
 pytest = ">=3.5"
 pytest-cov = "*"
 pytest-flake8 = ">=1.0.1"
