Adapt github actions workflow
Remove scheduled workflow.
Add the AWS_ATHENA_WORK_GROUP env. variable.

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,6 +12,7 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
       AWS_ATHENA_S3_STAGING_DIR: ${{ secrets.AWS_ATHENA_S3_STAGING_DIR }}
+      AWS_ATHENA_WORK_GROUP: ${{ secrets.AWS_ATHENA_WORK_GROUP }}
       CACHE_VERSION: v1
 
     strategy:
