--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,14 +40,15 @@ tenacity = ">=4.1.0"
 [tool.poetry.dev-dependencies]
 awscli = "^1.22.37"
 tox = "*"
+tox-gh-actions = "^2.9.1"
 wheel = "*"
 twine = "*"
 pandas = ">=1.0.0"
 pyarrow = ">=1.0.0"
 sqlalchemy = ">=1.0.0, <2.0.0"
-black = "^21.12b0"
+black = "^22.3.0"
 mypy = ">=0.900"
-flake8 = "<4"  # https://github.com/tholo/pytest-flake8/issues/81
+flake8 = "*"
 pytest = ">=3.5"
 pytest-cov = "*"
 pytest-flake8 = ">=1.0.1"
