--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,15 +5,19 @@ on:
   schedule:
     - cron:  "0 0 * * *"
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   tox:
     runs-on: ubuntu-latest
 
     env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_ROLE_ARN: ${{ secrets.AWS_ROLE_ARN }}
       AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
       AWS_ATHENA_S3_STAGING_DIR: ${{ secrets.AWS_ATHENA_S3_STAGING_DIR }}
+      AWS_ATHENA_WORKGROUP: ${{ secrets.AWS_ATHENA_WORKGROUP }}
 
     strategy:
       fail-fast: false
@@ -27,6 +31,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: ${{ env.AWS_ROLE_ARN }}
+          role-session-name: PyAthenaTestSession
+          aws-region: ${{ env.AWS_DEFAULT_REGION }}
 
       - name: Install Poetry
         uses: snok/install-poetry@v1
