Upload test data to a unique S3 location for each test run (fix #295)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ twine = "*"
 pandas = ">=1.0.0"
 pyarrow = ">=1.0.0"
 sqlalchemy = ">=1.0.0, <2.0.0"
+Jinja2 = "^3.1.2"
 black = "^22.3.0"
 mypy = ">=0.900"
 flake8 = "*"
