--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ tenacity = ">=4.1.0"
 sqlalchemy = {version = "<2.0.0,>=1.0.0", optional = true}
 pandas = {version = ">=1.3.0", optional = true}
 pyarrow = {version = ">=7.0.0", optional = true}
+fastparquet = {version = ">=0.4.0", optional = true}
 s3fs = {version = ">=2021.09.0", optional = true}
 
 [tool.poetry.dev-dependencies]
@@ -46,6 +47,7 @@ twine = "*"
 sqlalchemy = ">=1.0.0, <2.0.0"
 pandas = ">=1.3.0"
 pyarrow = ">=7.0.0"
+fastparquet = ">=0.4.0"
 s3fs = ">=2021.09.0"
 Jinja2 = ">=3.1.0"
 black = ">=22.3.0"
@@ -60,9 +62,10 @@ pytest-xdist = "*"
 pytest-mypy = "*"
 
 [tool.poetry.extras]
-pandas = ["pandas", "pyarrow", "s3fs"]
+pandas = ["pandas", "s3fs"]
 sqlalchemy = ["sqlalchemy"]
 arrow = ["pyarrow"]
+fastparquet = ["fastparquet"]
 
 [tool.poetry.plugins."sqlalchemy.dialects"]
 "awsathena" = "pyathena.sqlalchemy_athena:AthenaDialect"
