--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,6 +23,7 @@ jobs:
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
+          version: 1.2.0b3
           virtualenvs-create: true
           virtualenvs-in-project: false
           virtualenvs-path: ${{ github.workspace }}/.poetry
