--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,11 +30,14 @@ include = [
 [tool.poetry.dependencies]
 # https://github.com/pandas-dev/pandas/pull/35214
 python = "^3.7.1"
-boto3 = ">=1.13.20"
-botocore = ">=1.16.20"
+boto3 = ">=1.21.0"
+botocore = ">=1.24.7"
 tenacity = ">=4.1.0"
 sqlalchemy = {version = "<2.0.0,>=1.0.0", optional = true}
-pandas = {version = ">=1.3.0", optional = true}
+pandas = [
+    {version="<1.4,>=1.3.0", python=">=3.7.1,<3.8", optional = true},
+    {version=">=1.3.0", python=">=3.8,<3.10", optional = true},
+]
 pyarrow = {version = ">=7.0.0", optional = true}
 fastparquet = {version = ">=0.4.0", optional = true}
 s3fs = {version = ">=2021.09.0", optional = true}
@@ -45,10 +48,14 @@ tox-gh-actions = "*"
 wheel = "*"
 twine = "*"
 sqlalchemy = ">=1.0.0, <2.0.0"
-pandas = ">=1.3.0"
+pandas = [
+    {version="<1.4,>=1.3.0", python=">=3.7.1,<3.8"},
+    {version=">=1.3.0", python=">=3.8,<3.10"},
+]
 pyarrow = ">=7.0.0"
 fastparquet = ">=0.4.0"
 s3fs = ">=2021.09.0"
+aiobotocore = "*"
 Jinja2 = ">=3.1.0"
 black = ">=22.3.0"
 mypy = ">=0.900"
