--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,10 +34,7 @@ boto3 = ">=1.21.0"
 botocore = ">=1.24.7"
 tenacity = ">=4.1.0"
 sqlalchemy = {version = "<2.0.0,>=1.0.0", optional = true}
-pandas = [
-    {version="<1.4,>=1.3.0", python=">=3.7.1,<3.8", optional = true},
-    {version=">=1.3.0", python=">=3.8,<3.10", optional = true},
-]
+pandas = {version = ">=1.3.0", optional = true}
 pyarrow = {version = ">=7.0.0", optional = true}
 fastparquet = {version = ">=0.4.0", optional = true}
 s3fs = {version = ">=2021.09.0", optional = true}
