--- a/tox.ini
+++ b/tox.ini
@@ -14,5 +14,6 @@ whitelist_externals = poetry
 commands =
     poetry config experimental.new-installer false
     poetry install -v
-    poetry run pytest --cov pyathena --cov-report html --cov-report term --flake8 --black --isort --mypy
+    make chk
+    poetry run pytest --cov pyathena --cov-report html --cov-report term
 passenv = AWS_* TOXENV GITHUB_*
