Add make to whitelist_externals

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,9 @@ python =
     3.10: py310
 
 [testenv]
-whitelist_externals = poetry
+whitelist_externals =
+    poetry
+    make
 commands =
     poetry config experimental.new-installer false
     poetry install -v
