--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,11 +33,11 @@ python = "^3.7.1"
 boto3 = ">=1.26.4"
 botocore = ">=1.29.4"
 tenacity = ">=4.1.0"
+fsspec = "*"
 sqlalchemy = {version = "<2.0.0,>=1.0.0", optional = true}
 pandas = {version = ">=1.3.0", optional = true}
 pyarrow = {version = ">=7.0.0", optional = true}
 fastparquet = {version = ">=0.4.0", optional = true}
-fsspec = {version = "*"}
 
 [tool.poetry.dev-dependencies]
 tox = "*"
