--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ classifiers = [
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10"
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11"
 ]
 homepage = "https://github.com/laughingman7743/PyAthena/"
 authors = [
@@ -47,7 +48,7 @@ twine = "*"
 sqlalchemy = ">=1.0.0, <2.0.0"
 pandas = [
     {version="<1.4,>=1.3.0", python=">=3.7.1,<3.8"},
-    {version=">=1.3.0", python=">=3.8,<3.10"},
+    {version=">=1.3.0", python=">=3.8"},
 ]
 pyarrow = ">=7.0.0"
 fastparquet = ">=0.4.0"
