--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,8 +47,15 @@ wheel = "*"
 twine = "*"
 sqlalchemy = ">=1.0.0, <2.0.0"
 pandas = [
+    # https://pandas.pydata.org/docs/whatsnew/v1.4.0.html
     {version="<1.4,>=1.3.0", python=">=3.7.1,<3.8"},
     {version=">=1.3.0", python=">=3.8"},
+]
+numpy = [
+    # https://numpy.org/doc/stable/release/1.22.0-notes.html
+    {version="<1.22.0", python=">=3.7.1,<3.8"},
+    # https://numpy.org/doc/stable/release/1.24.0-notes.html
+    {version=">=1.24.0", python=">=3.11"},
 ]
 pyarrow = ">=7.0.0"
 fastparquet = ">=0.4.0"
