--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ pandas = {version = ">=1.3.0", optional = true}
 pyarrow = {version = ">=7.0.0", optional = true}
 fastparquet = {version = ">=0.4.0", optional = true}
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 tox = "*"
 tox-gh-actions = "*"
 wheel = "*"
@@ -63,7 +63,7 @@ Jinja2 = ">=3.1.0"
 isort = ">=5.10.1"
 black = ">=22.3.0"
 mypy = ">=0.900"
-flake8 = ">=5.0.0"
+flake8 = "*"
 pytest = ">=3.5"
 pytest-cov = "*"
 pytest-xdist = "*"
