Fix failed with pass_env values cannot contain whitespace, use comma to have multiple values in a single line

--- a/tox.ini
+++ b/tox.ini
@@ -19,4 +19,7 @@ commands =
     poetry install -v
     make chk
     poetry run pytest -n 8 --cov pyathena --cov-report html --cov-report term
-passenv = AWS_* TOXENV GITHUB_*
+passenv =
+    AWS_*
+    TOXENV
+    GITHUB_*
