Workaround for py37 AttributeError

--- a/tox.ini
+++ b/tox.ini
@@ -23,3 +23,16 @@ passenv =
     AWS_*
     TOXENV
     GITHUB_*
+
+[testenv:py37]
+allowlist_externals =
+    {[testenv]allowlist_externals}
+commands =
+    poetry config experimental.new-installer false
+    poetry install -v
+    # importlib-metadata==4.13.0
+    # AttributeError: 'EntryPoints' object has no attribute 'get'
+    # make chk
+    poetry run pytest -n 8 --cov pyathena --cov-report html --cov-report term
+passenv =
+    {[testenv]passenv}
