Drop support for Python 3.7 (fix #435)

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,9 @@
 [tox]
 isolated_build = true
-envlist = py37,py38,py39,py310,py311
+envlist = py38,py39,py310,py311
 
 [gh-actions]
 python =
-    3.7: py37
     3.8: py38
     3.9: py39
     3.10: py310
@@ -22,15 +21,3 @@ passenv =
     AWS_*
     TOXENV
     GITHUB_*
-
-[testenv:py37]
-allowlist_externals =
-    {[testenv]allowlist_externals}
-commands =
-    poetry install -v
-    # importlib-metadata==4.13.0
-    # AttributeError: 'EntryPoints' object has no attribute 'get'
-    # make chk
-    poetry run pytest -n 8 --cov pyathena --cov-report html --cov-report term
-passenv =
-    {[testenv]passenv}
