--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ classifiers = [
     "Operating System :: OS Independent",
     "Topic :: Database :: Front-Ends",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
@@ -29,8 +28,8 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-# https://github.com/pandas-dev/pandas/pull/35214
-python = "^3.7.1"
+# https://bugs.python.org/issue38342
+python = ">=3.8.1"
 boto3 = ">=1.26.4"
 botocore = ">=1.29.4"
 tenacity = ">=4.1.0"
@@ -46,17 +45,8 @@ tox-gh-actions = "*"
 wheel = "*"
 twine = "*"
 sqlalchemy = ">=1.0.0"
-pandas = [
-    # https://pandas.pydata.org/docs/whatsnew/v1.4.0.html
-    {version="<1.4,>=1.3.0", python=">=3.7.1,<3.8"},
-    {version=">=1.3.0", python=">=3.8"},
-]
-numpy = [
-    # https://numpy.org/doc/stable/release/1.22.0-notes.html
-    {version="<1.22.0", python=">=3.7.1,<3.8"},
-    # https://numpy.org/doc/stable/release/1.24.0-notes.html
-    {version=">=1.24.0", python=">=3.11"},
-]
+pandas = ">=1.3.0"
+numpy = ">=1.24.0"
 pyarrow = ">=7.0.0"
 fastparquet = ">=0.4.0"
 Jinja2 = ">=3.1.0"
@@ -85,7 +75,7 @@ norecursedirs = ["benchmarks", ".poetry", ".tox"]
 
 [tool.black]
 line-length = 100
-target-version = ['py37']
+target-version = ['py38']
 exclude = '(\.poetry|\.tox)'
 
 [tool.isort]
@@ -94,7 +84,7 @@ multi_line_output = 3
 skip_glob = [".poetry/*", ".tox/*"]
 
 [tool.mypy]
-python_version = 3.7
+python_version = 3.8
 follow_imports = "silent"
 disallow_any_generics = true
 strict_optional = true
