--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ sqlalchemy = {version = ">=1.0.0", optional = true}
 pandas = {version = ">=1.3.0", optional = true}
 pyarrow = {version = ">=7.0.0", optional = true}
 fastparquet = {version = ">=0.4.0", optional = true}
+packaging = "^23.1"
 
 [tool.poetry.group.dev.dependencies]
 tox = "*"
