--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -38,3 +38,4 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: dist/*
+          generate_release_notes: true
