--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,10 @@ wheel = "*"
 twine = "*"
 sqlalchemy = ">=1.0.0"
 pandas = ">=1.3.0"
-numpy = ">=1.24.0"
+numpy = [
+    {version=">=1.24.0,<1.26.0", python="<3.12"},
+    {version=">=1.26.0", python=">=3.12"},
+]
 pyarrow = ">=7.0.0"
 fastparquet = ">=0.4.0"
 Jinja2 = ">=3.1.0"
