Fix action for trusted entities

--- a/scripts/cloudformation/github_actions_oidc.yaml
+++ b/scripts/cloudformation/github_actions_oidc.yaml
@@ -112,7 +112,7 @@ Resources:
       AssumeRolePolicyDocument:
         Statement:
           - Effect: Allow
-            Action: sts:AssumeRoleWithWebIdentity
+            Action: sts:AssumeRole
             Principal:
               Service: "athena.amazonaws.com"
             Condition:
