--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,19 +19,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install poetry
-        run: pipx install poetry
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: pdm-project/setup-pdm@v3
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          cache: 'poetry'
+          cache: true
       - name: Install dependencies
-        run: poetry install --no-interaction --no-root
+        run: pdm install -v --dev
 
       - name: Build
         run: |
-          poetry build -vvv
+          pdm build -v
       - name: Publish release distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
       - name: Release
