--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,15 +27,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install poetry
-        run: pipx install poetry
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: pdm-project/setup-pdm@v3
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'poetry'
+          cache: true
       - name: Install dependencies
-        run: poetry install --no-interaction --no-root
+        run: pdm install -v --dev
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
