--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,18 @@
-[tool.poetry]
+[project]
 name = "PyAthena"
-version = "3.1.0"  # https://github.com/laughingman7743/PyAthena/blob/master/pyathena/__init__.py#L10
 description = "Python DB API 2.0 (PEP 249) client for Amazon Athena"
-license = "MIT"
+authors = [
+    {name = "laughingman7743", email = "laughingman7743@gmail.com"},
+]
+dependencies = [
+    "boto3>=1.26.4",
+    "botocore>=1.29.4",
+    "tenacity>=4.1.0",
+    "fsspec",
+]
+requires-python = ">=3.8.1"  # https://bugs.python.org/issue38342
+readme = "README.rst"
+license = {file = "LICENSE"}
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
@@ -15,61 +25,57 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11"
 ]
+dynamic = ["version"]
+
+[project.urls]
 homepage = "https://github.com/laughingman7743/PyAthena/"
-authors = [
-    "laughingman7743 <laughingman7743@gmail.com>"
-]
-readme = "README.rst"
-packages = [
-    { include = "pyathena" },
-]
-include = [
-    { path = "pyathena/py.typed" },
-]
+repository = "https://github.com/laughingman7743/PyAthena/"
 
-[tool.poetry.dependencies]
-# https://bugs.python.org/issue38342
-python = ">=3.8.1"
-boto3 = ">=1.26.4"
-botocore = ">=1.29.4"
-tenacity = ">=4.1.0"
-fsspec = "*"
-sqlalchemy = {version = ">=1.0.0", optional = true}
-pandas = {version = ">=1.3.0", optional = true}
-pyarrow = {version = ">=7.0.0", optional = true}
-fastparquet = {version = ">=0.4.0", optional = true}
-
-[tool.poetry.group.dev.dependencies]
-tox = "*"
-tox-gh-actions = "*"
-wheel = "*"
-twine = "*"
-sqlalchemy = ">=1.0.0"
-pandas = ">=1.3.0"
-numpy = ">=1.24.0"
-pyarrow = ">=7.0.0"
-fastparquet = ">=0.4.0"
-Jinja2 = ">=3.1.0"
-isort = ">=5.10.1"
-black = ">=22.3.0"
-mypy = ">=0.900"
-flake8 = "*"
-pytest = ">=3.5"
-pytest-cov = "*"
-pytest-xdist = "*"
-pytest-dependency = "^0.6.0"
-
-[tool.poetry.extras]
-pandas = ["pandas"]
-sqlalchemy = ["sqlalchemy"]
-arrow = ["pyarrow"]
-fastparquet = ["fastparquet"]
-
-[tool.poetry.plugins."sqlalchemy.dialects"]
-"awsathena" = "pyathena.sqlalchemy.base:AthenaDialect"
+[project.entry-points."sqlalchemy.dialects"]
+awsathena = "pyathena.sqlalchemy.base:AthenaDialect"
 "awsathena.rest" = "pyathena.sqlalchemy.rest:AthenaRestDialect"
 "awsathena.pandas" = "pyathena.sqlalchemy.pandas:AthenaPandasDialect"
 "awsathena.arrow" = "pyathena.sqlalchemy.arrow:AthenaArrowDialect"
+
+[project.optional-dependencies]
+sqlalchemy = ["sqlalchemy>=1.0.0"]
+pandas = ["pandas>=1.3.0"]
+arrow = ["pyarrow>=7.0.0"]
+fastparquet = ["fastparquet>=0.4.0"]
+
+[build-system]
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
+
+[tool.pdm]
+package-type = "library"
+
+[tool.pdm.dev-dependencies]
+dev = [
+    "tox",
+    "tox-gh-actions",
+    "wheel",
+    "twine",
+    "sqlalchemy>=1.0.0",
+    "pandas>=1.3.0",
+    "numpy>=1.24.0",
+    "pyarrow>=7.0.0",
+    "fastparquet>=0.4.0",
+    "Jinja2>=3.1.0",
+    "mypy>=0.900",
+    "pytest>=3.5",
+    "pytest-cov",
+    "pytest-xdist",
+    "pytest-dependency",
+    "ruff>=0.1.13",
+]
+
+[tool.pdm.version]
+source = "file"
+path = "pyathena/__init__.py"
+
+[tool.pdm.build]
+includes = ["pyathena", "pyathena/py.typed"]
 
 [tool.tox]
 legacy_tox_ini = """
@@ -86,10 +92,10 @@ python =
 
 [testenv]
 allowlist_externals =
-    poetry
+    pdm
     make
 commands =
-    poetry install -v
+    pdm install -v --dev
     make test
 passenv =
     AWS_*
@@ -98,22 +104,37 @@ passenv =
 
 [testenv:py{38,39,310,311}-sqla]
 commands =
-    poetry install -v
+    pdm install -v --dev
     make test-sqla
 """
 
 [tool.pytest.ini_options]
-norecursedirs = ["benchmarks", ".poetry", ".tox"]
+norecursedirs = ["benchmarks", ".tox", ".venv"]
 
-[tool.black]
+[tool.sqla_testing]
+requirement_cls = "pyathena.sqlalchemy.requirements:Requirements"
+profile_file = "tests/sqlalchemy/profiles.txt"
+
+[tool.ruff]
 line-length = 100
-target-version = ['py38']
-exclude = '(\.poetry|\.tox)'
-
-[tool.isort]
-profile = "black"
-multi_line_output = 3
-skip_glob = [".poetry/*", ".tox/*"]
+exclude = [
+    ".venv",
+    ".tox",
+    "tests"
+]
+target-version = "py38"
+# https://docs.astral.sh/ruff/rules/
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "N",  # pep8-naming
+    # "SIM",  # flake8-simplify
+    # "B",  # flake8-bugbear
+    # "C4",  # flake8-comprehensions
+    # "UP",  # pyupgrade
+]
 
 [tool.mypy]
 python_version = 3.8
@@ -128,12 +149,4 @@ warn_no_return = true
 warn_return_any = true
 warn_unreachable = true
 warn_unused_configs = true
-exclude = ["benchmarks.*", "tests.*", ".poetry.*", ".tox.*"]
-
-[tool.sqla_testing]
-requirement_cls = "pyathena.sqlalchemy.requirements:Requirements"
-profile_file = "tests/sqlalchemy/profiles.txt"
-
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+exclude = ["benchmarks.*", "tests.*", ".tox.*", ".venv.*"]
