Change tool.pdm.package-type to distribution

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ requires = ["pdm-backend"]
 build-backend = "pdm.backend"
 
 [tool.pdm]
-package-type = "library"
+distribution = true
 
 [tool.pdm.dev-dependencies]
 dev = [
